k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecotrack360-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ecotrack.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ecotrack360-app-svc
                port:
                  number: 80
